# meu-banco-digital-fastapi

./: README.md  database.db  pyproject.toml
src/: database.py  main.py  security.py
src/controllers/: auth.py  conta.py  transacao.py
src/models/: conta.py  historico.py  transacao.py
src/schemas/: conta.py  historico.py  transacao.py
src/services/: conta.py  transacao.py
src/views/: conta.py  transacao.py
tests/: conftest.py
tests/integration/controllers/auth/: test_login.py
tests/integration/controllers/conta/: test_criar_conta.py  test_ler_transacoes.py  test_listar_contas.py
tests/integration/controllers/transacao/: test_deposito.py  test_saque.py
